Fix for mobile css div.time-container change from nowrap to wrap so doesn't populate all horizontal

--- a/src/assets/css/onsched.css
+++ b/src/assets/css/onsched.css
@@ -1604,7 +1604,7 @@ ul.onsched-dropdown-menu li a:hover {
     }
     div.time-container {
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
     }
     .onsched-select {
         font-size: 16px;
